--- a/client/styles/components/_panel.scss
+++ b/client/styles/components/_panel.scss
@@ -47,11 +47,8 @@ $sidebar-min-width: 300px;
   // Required
   @include flex-basis(100%);
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
   position: relative;  // To contain absolute-positioned child elements
-
-  // Default styles
-  border-right: 1px solid $dark-gray;
 
   &:last-of-type {
     border-right: 0;
@@ -60,7 +57,8 @@ $sidebar-min-width: 300px;
 
 .panel--vertical {
   @include flex-basis(100%);
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   height: 50%;  // Until I get it working in WebKit
 
   &:not(:last-child) {
@@ -74,6 +72,7 @@ $sidebar-min-width: 300px;
 
   // Recommended
   max-width: $menu-width;
+  border-right: 0;
 
   // Default styles
   background-color: #23313b;
